[gd_scene load_steps=8 format=3 uid="uid://dyuhy5pqbscse"]

[ext_resource type="Script" uid="uid://7vgo4lwpnrf3" path="res://uiScripts/home_overlay.gd" id="1_fgovn"]
[ext_resource type="Texture2D" uid="uid://cdjxa4qoxh16o" path="res://assets/icons/icon_settings.png" id="3_jlpia"]
[ext_resource type="FontFile" uid="uid://bdkolrntsny1i" path="res://assets/fonts/Baloo2-Bold.ttf" id="3_la72k"]
[ext_resource type="PackedScene" uid="uid://dy35jb333yykg" path="res://uiScenes/SettingPopUp.tscn" id="4_fxwqt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_51jun"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jlpia"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a3shx"]

[node name="HomeOverlay" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(672, 96)
mouse_filter = 1
script = ExtResource("1_fgovn")

[node name="VBox" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(1080, 1920)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spacer1" type="Control" parent="VBox"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Spacer2" type="Control" parent="VBox/HBox"]
custom_minimum_size = Vector2(160, 160)
layout_mode = 2

[node name="highscoreLabel" type="Label" parent="VBox/HBox"]
custom_minimum_size = Vector2(725, 81)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_shadow_color = Color(0.509804, 0.509804, 0.509804, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 7
theme_override_fonts/font = ExtResource("3_la72k")
theme_override_font_sizes/font_size = 75
text = "HighScore : "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="VBox/HBox"]
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxEmpty_51jun")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_jlpia")
theme_override_styles/normal = SubResource("StyleBoxEmpty_a3shx")
icon = ExtResource("3_jlpia")
icon_alignment = 1

[node name="Spacer3" type="Control" parent="VBox"]
custom_minimum_size = Vector2(0, 800)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="PlayLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.509804, 0.509804, 0.509804, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 7
theme_override_fonts/font = ExtResource("3_la72k")
theme_override_font_sizes/font_size = 100
text = "Drag to
Start"
horizontal_alignment = 1

[node name="Spacer4" type="Control" parent="VBox"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="CanvasLayer" type="CanvasLayer" parent="VBox"]

[node name="SettingPopUp" parent="VBox/CanvasLayer" instance=ExtResource("4_fxwqt")]
visible = false
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="VBox/HBox/Button" to="." method="_on_settings_button_pressed"]
